force-app/main/default/objects/Team__c/fields/CFO__c.field-meta.xml
<CustomField>
    <fullName>CFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFO</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>