force-app/main/default/objects/Team__c/fields/Team_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Type__c</fullName>
    <label>Team Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRM Team</fullName>
            </value>
            <value>
                <fullName>Sales Approvers Team</fullName>
            </value>
            <value>
                <fullName>Cancellation Approval Team</fullName>
            </value>
            <value>
                <fullName>File Note Approver Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>