force-app/main/default/objects/Team__c/fields/TowerLookup__c.field-meta.xml
<CustomField>
    <fullName>TowerLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TowerLookup</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>