force-app/main/default/objects/Team__c/validationRules/CRM_Finance_Audit_CFO_are_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CRM_Finance_Audit_CFO_are_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 TEXT(Team_Type__c) = &apos;File Note Approver Team&apos;,
 OR(
     ISBLANK(CFO__c),
     ISBLANK(CRM__c),
     ISBLANK(Finance__c),
     ISBLANK(Audit__c)
 )
)</errorConditionFormula>
    <errorMessage>Please select CRM, CFO, Audit and Finance for approval</errorMessage>
</ValidationRule>